updated with neutral class

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,9 @@
                             positive : {{positive}}
 
                         <br>
+                            neutral : {{neutral}}
+
+                        <br>
                             negative : {{negative}}
                         
                         </p>
