--- a/templates/index.html
+++ b/templates/index.html
@@ -1,71 +1,135 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sentiment Tool</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>App</title>
+    <style>
+        body {
+            background-color: #252525;
+            color: white;
+        }
+
+        .navbar {
+            background-color: #FFA500 !important;
+        }
+
+        .navbar-brand {
+            color: black;
+            font-weight: bold;
+        }
+
+        .nav-link {
+            color: #808080;
+            font-weight: bold;
+        }
+
+        .nav-link:hover {
+            color: #000;
+        }
+
+        .card {
+            background-color: #343a40;
+            border: 1px solid #FFA500;
+        }
+
+        .card-header {
+            background-color: #FFA500;
+            color: black;
+        }
+
+        .table {
+            color: white;
+        }
+
+        .sentiment-badge {
+            border-radius: 20px;
+            padding: 5px 10px;
+            margin-right: 10px;
+        }
+        .custom-table-width {
+            width: 80%; /* Adjust the width as needed */
+        }
+    </style>
 </head>
 <body>
 
-    <div class="split left">
-        <div class="centered">
-            <img src="../static/products/prod1.jpg" alt="">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/" style="color: black;">Sentiment Tool</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/" style="color: #808080; font-weight: bold;" onmouseover="this.style.color='#000'" onmouseout="this.style.color='#808080'">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about" style="color: #808080; font-weight: bold;" onmouseover="this.style.color='#000'" onmouseout="this.style.color='#808080'">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact" style="color: #808080; font-weight: bold;" onmouseover="this.style.color='#000'" onmouseout="this.style.color='#808080'">Contact</a>
+                </li>
+            </ul>
         </div>
-    </div>
+    </nav>
 
-    <div class="split right">
-        <div class="container mt-5 mb-5">
-            <div class="d-flex justify-content-center row">
-                <div class="d-flex flex-column col-md-8">
-                        <p>
-                            positive : {{positive}}
+    <div class="container-fluid mt-4">
 
-                        <br>
-                            neutral : {{neutral}}
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <p class="mt-3">
+                    <span class="badge badge-primary sentiment-badge">Positive</span>: {{positive}}
+                    <span class="badge badge-secondary sentiment-badge">Neutral</span>: {{neutral}}
+                    <span class="badge badge-danger sentiment-badge">Negative</span>: {{negative}}
+                </p>
 
-                        <br>
-                            negative : {{negative}}
-                        
-                        </p>
+                <form method="post" class="mt-3">
+                    <div class="form-group">
+                        <textarea name="text" class="form-control" rows="3" placeholder="Enter your comment here" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-warning">Submit</button>
+                </form>
+            </div>
+        </div>
 
-                    <div>
-                        <form method="post">
-                          <textarea name="text"></textarea>
-                          <input type="submit">
-                        </form>
+        <div class="container-fluid mt-5">
+            <div class="row justify-content-center">
+                <div class="col-md-10">
+                    <div class="card">
+                        <div class="card-header bg-warning text-black">Comments</div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Sentence</th>
+                                            <th>Sentiment</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for index, row in output_df.iterrows() %}
+                                            <tr>
+                                                <td>{{ row['Sentence'] }}</td>
+                                                <td>{{ row['Sentiment'] }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="comment-bottom bg-white p-2 px-4">
-            <!-- Move these block tags outside of the previous div -->
-            {% block content %}
-                <!-- Display other content as needed -->
-
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Sentence</th>
-                            <th>Sentiment</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for index, row in output_df.iterrows() %}
-                            <tr>
-                                <td>{{ row['Sentence'] }}</td>
-                                <td>{{ row['Sentiment'] }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-
-                <!-- Display other content as needed -->
-            {% endblock %}
-        </div>
+        
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
